modified:   frontend/styles/main.css 	modified:   index.html 	modified:   success_checkout.html 	new file:   urlweb.txt 	new file:   web-ss.png

--- a/index.html
+++ b/index.html
@@ -90,23 +90,23 @@
       </div>
 
       <div class="row justify-content-center">
-        <div class="col-12 col-md-6 category1">
+        <div class="col-12 col-lg-6 category1">
           <div class="btn-fluid">
             <img src="frontend/images/assets/category/hiking-category.png" alt="">
             <a href="product.html" class="btn d-flex justify-content-center">Hiking</a>
           </div>
         </div>
-        <div class="col-12 col-md-6 quote category1">
+        <div class="col-12 col-lg-6 quote category1">
           <h5>"Dunia itu seluas langkah kaki, jelajahi dan jangan pernah takut melangkah, hanya dengan itu kita bisa
             mengerti kehidupan dan menyatu dengannya." – Soe Hok Gie-</h5>
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col-12 col-md-6 quote category2">
+        <div class="col-12 col-lg-6 quote category2 order2">
           <h5>"Hanyalah persiapan, pengetahuan dan pengalaman yang membuat kita mampu bertahan hidup." -Rachel Kelsey
           </h5>
         </div>
-        <div class="col-12 col-md-6 category2">
+        <div class="col-12 col-lg-6 category2 order1">
           <div class="btn-fluid">
             <img src="frontend/images/assets/category/camping-category.png" alt="">
             <a href="#" class="btn d-flex justify-content-center">Camping</a>
