--- a/success_checkout.html
+++ b/success_checkout.html
@@ -16,11 +16,11 @@
 
   <section class="success-checkout">
     <div class="container">
-      <div class="row text-center">
-        <div class="col-12">
+      <div class="row ">
+        <div class="col-12 text-center">
           <img src="frontend/images/assets/success_checkout/checkout-success.png" alt="">
           <h3>Checkout Success</h3>
-          <div class="btn-detail ">
+          <div class="btn-detail">
 
             <a href="#" class="btn btn-cart">Konfirmasi Pembayaran</a>
             <a href="index.html" class="btn btn-list">Home</a>
